--- a/index-test.html
+++ b/index-test.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
 
-    <title>Administrator</title>
+    <title>WATER</title>
 
     <!-- Bootstrap Core CSS -->
     <!-- <link rel="stylesheet" href="assets/css/bootstrap.min.css" /> -->
